--- a/index.html
+++ b/index.html
@@ -27,10 +27,6 @@
             display: flex;
             flex-direction: column;
         }
-
-        img{
-            width: 50px !important;
-        }
     </style>
 </head>
 
@@ -51,6 +47,7 @@
                 image: {
                     class: ImageTool,
                     config: {
+                        defaultDirection:"flex-start",// 'flex-start' 'center' 'flex-end'
                         uploader: {
                             /**
                              * Upload file to the server and return an uploaded image data
@@ -90,7 +87,7 @@
                             "withBorder": false,
                             "withBackground": false,
                             "stretched": true,
-                            "direction": 'center'
+                            "direction": ''
                         }
                     }
 
