--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@latest"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@calumk/editorjs-nested-checklist@latest"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@2.26.5/dist/editor.min.js"></script>    <!-- <script src="https://cdn.jsdelivr.net/npm/@calumk/editorjs-nested-checklist@latest"></script> -->
     <script src="./dist/bundle.js"></script>
     <!-- <link rel="stylesheet" href="./css/index.css"> -->
     <style>
@@ -84,10 +83,7 @@
                                 "url": "https://app.loongtex.com/api/media/blog/2023/03/35d18c9c02daaf1c1c249616f4f27af1_o7YLvNa.jpg"
                             },
                             "caption": "Roadster // tesla.com",
-                            "withBorder": false,
-                            "withBackground": false,
-                            "stretched": true,
-                            "direction": ''
+                            "direction": 'center'
                         }
                     }
 
