--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     class: ImageTool,
                     config: {
                         defaultDirection:"flex-start",// 'flex-start' 'center' 'flex-end'
+                        minWidth: 36,
                         uploader: {
                             /**
                              * Upload file to the server and return an uploaded image data
@@ -83,7 +84,9 @@
                                 "url": "https://app.loongtex.com/api/media/blog/2023/03/35d18c9c02daaf1c1c249616f4f27af1_o7YLvNa.jpg"
                             },
                             "caption": "Roadster // tesla.com",
-                            "direction": 'center'
+                            "direction": 'center',
+                            "width": '351px',
+                            "height": '351px',
                         }
                     }
 
