--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@2.26.5/dist/editor.min.js"></script>    <!-- <script src="https://cdn.jsdelivr.net/npm/@calumk/editorjs-nested-checklist@latest"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@2.26.5/dist/editor.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@calumk/editorjs-nested-checklist@latest"></script> -->
     <script src="./dist/bundle.js"></script>
     <!-- <link rel="stylesheet" href="./css/index.css"> -->
     <style>
@@ -46,7 +47,7 @@
                 image: {
                     class: ImageTool,
                     config: {
-                        defaultDirection:"flex-start",// 'flex-start' 'center' 'flex-end'
+                        defaultDirection: "flex-start",// 'flex-start' 'center' 'flex-end'
                         minWidth: 36,
                         uploader: {
                             /**
