--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 image: {
                     class: ImageTool,
                     config: {
-                        defaultDirection: "flex-start",// 'flex-start' 'center' 'flex-end'
+                        defaultDirection: "center",// 'flex-start' 'center' 'flex-end'
                         minWidth: 36,
                         uploader: {
                             /**
@@ -85,7 +85,7 @@
                                 "url": "https://app.loongtex.com/api/media/blog/2023/03/35d18c9c02daaf1c1c249616f4f27af1_o7YLvNa.jpg"
                             },
                             "caption": "Roadster // tesla.com",
-                            "direction": 'center',
+                            "direction": 'flex-start',
                             "width": '351px',
                             "height": '351px',
                         }
