图片高度和宽度使用百分比

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                             },
                             "caption": "Roadster // tesla.com",
                             "direction": 'flex-start',
-                            "width": '351px',
-                            "height": '351px',
+                            "width": '30%',
+                            "height": 'auto',
                         }
                     }
 
